fixed overflow

--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -13,8 +13,15 @@ $main-color : #260F71;
     .project-card {
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+        border-bottom-left-radius: 16px;
+        
         width: 30vw;
         margin-bottom: 32px;
+    }
+    .projet-wrapper {
+        border-bottom-right-radius: 16px;
+        border-bottom-left-radius: 16px;
     }
         
         .card1 {
